update html file

--- a/index.html
+++ b/index.html
@@ -1,56 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adobe Clone</title>
-</head>
-<body>
-  <header class="header">
-    <section class="header-title">
-      <p>ICON</p>
-      <p>Adobe Acrobat Pro DC(32-bit)</p>
-      <p>ICON</p>
-      <p>ICON</p>
-      <p>ICON</p>
-    </section>
-    
-    <section class="header-toolbar">
-      <ul class="toolbar-list">
-        <li class="toolbar-list-items"><a href="#">File</a></li>
-        <li class="toolbar-list-items"><a href="#">Edit</a></li>
-        <li class="toolbar-list-items"><a href="#">View</a></li>
-        <li class="toolbar-list-items"><a href="#">Sign</a></li>
-        <li class="toolbar-list-items"><a href="#">Window</a></li>
-        <li class="toolbar-list-items"><a href="#">Help</a></li>
-      </ul>
-    </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/general.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Adobe Clone &Iota; The best Adobe clone frontend project</title>
+  </head>
+  <body>
+    <header class="header">
+      <section class="header-title display-flex">
+        <div class="header-title-text display-flex">
+          <img class="img-resize" src="img/acrobat.png" alt="Adobe icon" />
+          <p>Adobe Acrobat Pro DC (32-bit)</p>
+        </div>
+        <div class="header-title-icons display-flex">
+          <p>ICON</p>
+          <p>ICON</p>
+          <p>ICON</p>
+        </div>
+      </section>
 
-    <nav class="header-nav-bar">
-      <ul class="nav-bar-list">
-        <li class="toolbar-list-items"><a href="#">Home</a></li>
-        <li class="nav-bar-list-items"><a href="#">Tools</a></li>
-      </ul>
-      <div class="nav-bar-search">Search</div>
-      <ul class="nav-bar-icons">
-        <li class="nav-bar-icon"><a href="#">ICON</a></li>
-        <li class="nav-bar-icon"><a href="#">ICON</a></li>
-        <li class="nav-bar-icon"><a href="#">ICON</a></li>
-      </ul>
-      <p class="nav-bar-text">Sign In</p>
-    </nav>
-  </header>
+      <section class="header-toolbar">
+        <ul class="toolbar-list display-flex">
+          <li>
+            <a class="toolbar-list-items" href="#"><span>F</span>ile</a>
+          </li>
+          <li>
+            <a class="toolbar-list-items" href="#"><span>E</span>dit</a>
+          </li>
+          <li>
+            <a class="toolbar-list-items" href="#"><span>V</span>iew</a>
+          </li>
+          <li>
+            <a class="toolbar-list-items" href="#"><span>S</span>ign</a>
+          </li>
+          <li>
+            <a class="toolbar-list-items" href="#"><span>W</span>indow</a>
+          </li>
+          <li>
+            <a class="toolbar-list-items" href="#"><span>H</span>elp</a>
+          </li>
+        </ul>
+      </section>
 
-  <main class="main">
-    
-  </main>
+      <nav class="header-nav-bar display-flex">
+        <ul class="nav-bar-list display-flex">
+          <li class="toolbar-list-items"><a href="#"><span>H</span>ome</a></li>
+          <li class="nav-bar-list-items"><a href="#"><span>T</span>ools</a></li>
+        </ul>
+        <div class="nav-bar-search"><input class="nav-bar-search-box" type="text" placeholder="Search"></div>
+        <ul class="nav-bar-icons display-flex">
+          <li class="nav-bar-icon"><a href="#">ICON</a></li>
+          <li class="nav-bar-icon"><a href="#">ICON</a></li>
+          <li class="nav-bar-icon"><a href="#">ICON</a></li>
+        </ul>
+        <p class="nav-bar-text"><span>S</span>ign In</p>
+      </nav>
+    </header>
 
-  <asiide class="aside">
+    <main class="main"></main>
 
-  </asiide>
+    <asiide class="aside"> </asiide>
 
-  <footer class="footer">
-
-  </footer>
-</body>
+    <footer class="footer"></footer>
+  </body>
 </html>
