--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           <p>Adobe Acrobat Pro DC (32-bit)</p>
         </div>
         <div class="header-title-icons display-flex">
-          <p>ICON</p>
-          <p>ICON</p>
-          <p>ICON</p>
+          <p><ion-icon name="remove-outline"></ion-icon></p>
+          <p><ion-icon name="albums-outline"></ion-icon></p>
+          <p><ion-icon name="close-outline"></ion-icon></p>
         </div>
       </section>
 
@@ -46,16 +46,75 @@
 
       <nav class="header-nav-bar display-flex">
         <ul class="nav-bar-list display-flex">
-          <li class="toolbar-list-items"><a href="#"><span>H</span>ome</a></li>
-          <li class="nav-bar-list-items"><a href="#"><span>T</span>ools</a></li>
+          <li>
+            <a class="nav-bar-list-items" href="#"><span>H</span>ome</a>
+          </li>
+          <li>
+            <a class="nav-bar-list-items" href="#"><span>T</span>ools</a>
+          </li>
         </ul>
-        <div class="nav-bar-search"><input class="nav-bar-search-box" type="text" placeholder="Search"></div>
-        <ul class="nav-bar-icons display-flex">
-          <li class="nav-bar-icon"><a href="#">ICON</a></li>
-          <li class="nav-bar-icon"><a href="#">ICON</a></li>
-          <li class="nav-bar-icon"><a href="#">ICON</a></li>
+
+        <input class="nav-bar-search-box" type="text" placeholder="Search" />
+
+        <ul class="nav-bar-icon display-flex">
+          <li>
+            <a class="nav-bar-icon-link" href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="nav-bar-icons"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M8.625 9.75a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0 0 1 .778-.332 48.294 48.294 0 0 0 5.83-.498c1.585-.233 2.708-1.626 2.708-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="nav-bar-icon-link" href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="nav-bar-icons"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="nav-bar-icon-link" href="#"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="nav-bar-icons"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"
+                />
+              </svg>
+            </a>
+          </li>
         </ul>
-        <p class="nav-bar-text"><span>S</span>ign In</p>
+        <div>
+          <p class="nav-bar-text"><span>S</span>ign In</p>
+        </div>
       </nav>
     </header>
 
@@ -64,5 +123,13 @@
     <asiide class="aside"> </asiide>
 
     <footer class="footer"></footer>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
