--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Adobe Clone &Iota; The best Adobe clone frontend project</title>
   </head>
   <body>
-    <header class="header">
+    <header class="section-header">
       <section class="header-title display-flex">
         <div class="header-title-text display-flex">
           <img class="img-resize" src="img/acrobat.png" alt="Adobe icon" />
           <p>Adobe Acrobat Pro DC (32-bit)</p>
         </div>
-        <div class="header-title-icons display-flex">
-          <p><ion-icon name="remove-outline"></ion-icon></p>
-          <p><ion-icon name="albums-outline"></ion-icon></p>
-          <p><ion-icon name="close-outline"></ion-icon></p>
+        <div class="header-title-icon display-flex">
+          <ion-icon class="header-title-icons" name="remove-outline"></ion-icon>
+          <ion-icon class="header-title-icons" name="copy-outline"></ion-icon>
+          <ion-icon class="header-title-icons" name="close-outline"></ion-icon>
         </div>
       </section>
 
@@ -47,10 +47,10 @@
       <nav class="header-nav-bar display-flex">
         <ul class="nav-bar-list display-flex">
           <li>
-            <a class="nav-bar-list-items" href="#"><span>H</span>ome</a>
+            <a class="nav-bar-list-items" href="#">Home</a>
           </li>
           <li>
-            <a class="nav-bar-list-items" href="#"><span>T</span>ools</a>
+            <a class="nav-bar-list-items" href="#">Tools</a>
           </li>
         </ul>
 
@@ -118,11 +118,11 @@
       </nav>
     </header>
 
-    <main class="main"></main>
+    <main class="section-main"></main>
 
-    <asiide class="aside"> </asiide>
+    <asiide class="section-aside"> </asiide>
 
-    <footer class="footer"></footer>
+    <footer class="section-footer"></footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
